--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -40,7 +40,7 @@
                         <td>{{docItem.CreatedBy}}</td>
                         <td>{{docItem.CreatedDate}}</td>
                         <td><span class="status text-nowrap" [ngClass]="getStatusClass(docItem['Status'])">{{docItem.Status}} </span></td>
-                        <td class="text-center"><i class="bi bi-pencil"></i></td>
+                        <td class="text-center" (click)="editdoc(docItem)"><i class="bi bi-pencil"></i></td>
                     </tr>
                 </ng-template>
             </p-table>
