--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -18,16 +18,17 @@
   <div class="row p-2">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <!-- <table [value]="types" tableStyleClass="table table-striped"> -->
+        <p-table [value]="types" tableStyleClass="table table-striped">
           <ng-template pTemplate="header">
             <tr>
               <th>S.No</th>
-              <th pSortableColumn="DepartmentName" style="width:20%">Department Name</th>
-              <th pSortableColumn="DepartmentCode" style="width:10%">Department Code </th>
-              <th pSortableColumn="Description" style="width:15%">Comments</th>
-              <th pSortableColumn="RegisteredBy" style="width:20%">Registered by</th>
-              <th pSortableColumn="RegisteredOn" style="width:200px">Registered On </th>
-              <th pSortableColumn="Status" style="width:200px">Status </th>
+              
+              <th pSortableColumn="DepartmentName" style="width:20%">Department Name<p-sortIcon field="Department Name"></p-sortIcon></th>
+              <th pSortableColumn="DepartmentCode" style="width:10%">Department Code<p-sortIcon field="Department Code"></p-sortIcon> </th>
+              <th pSortableColumn="Description" style="width:15%">Comments<p-sortIcon field="Comments"></p-sortIcon></th>
+              <th pSortableColumn="RegisteredBy" style="width:20%">Registered by<p-sortIcon field="Registered by"></p-sortIcon></th>
+              <th pSortableColumn="RegisteredOn" style="width:200px">Registered On <p-sortIcon field="Registered On"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:200px">Status </th><p-sortIcon field="Status"></p-sortIcon>
               <th style="width:80px">Actions</th>
             </tr>
           </ng-template>
@@ -38,12 +39,12 @@
               <td>{{doc?.DepartmentCode }}</td>
               <td>{{doc?.Comments}}</td>
               <td>{{doc?.ModifiedBy}}</td>
-              <td>{{doc?.ModifiedDate }}</td>
-              <td><span (click)="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
-              <td class="text-center" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
+              <td>{{doc?.ModifiedDate | date }}</td>
+              <td><span (click)="getStatusClass(doc['Status'])">Success</span></td>
+              <td class="text-right" style="width:80px" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
-        <!-- </table> -->
+        </p-table>
       </div>
     </div>
   </div>
