--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
@@ -3,7 +3,7 @@
     <div class="col">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h4 class="page-title flex-grow-1">Document Types</h4>
+        <h4 class="page-title flex-grow-1">Role Configuration</h4>
         <div class="d-flex page-title-actions">
           <input type="text" class="form-control" placeholder="Search">
           <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRoles()"  >Add</button>
@@ -17,31 +17,29 @@
         <p-table [value]="types" tableStyleClass="table table-striped">
           <ng-template pTemplate="header">
             <tr>
-              <th>#</th>
-              <th pSortableColumn="S.No" style="width:20%">S.No<p-sortIcon field="S.no"></p-sortIcon></th>
+              <th>#</th>             
               <th pSortableColumn="Role Name" style="width:10%">Role Name <p-sortIcon field="Role Name"></p-sortIcon></th>
               <th pSortableColumn="Department" style="width:15%">Department<p-sortIcon field="Department"></p-sortIcon></th>
               <th pSortableColumn="Comments" style="width:20%">Comments<p-sortIcon field="Comments"></p-sortIcon></th>
               <th pSortableColumn="Registered By" style="width:200px">Registered By<p-sortIcon field="Registered By"></p-sortIcon></th>
               <th pSortableColumn="Registered On" style="width:200px">Registered On <p-sortIcon field="Registered On"></p-sortIcon></th>
-              <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+              
               <th pSortableColumn="Modify" style="width:200px">Modify<p-sortIcon field="Modify"></p-sortIcon></th>
-
+              <th style="width:80px">Actions</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
             <tr>
-              <td>{{ i + 1 }}</td>
-              <td>{{doc?.s.no}}</td>
-              <td>{{doc?.rolename}}</td>
-              <td>{{doc?.department}}</td>
-              <td>{{doc?.comments}}</td>
-              <td>{{doc?.registeredby}}</td>
-              <td>{{doc?.registeredon}}</td>
-              <td>{{doc?.status}}</td>
-              <td>{{doc?.modify}}</td>
+              <td>{{ i + 1 }}</td>             
+              <td>{{doc?.Role}}</td>
+              <td>{{doc?.Department}}</td>
+              <td>{{doc?.Comments}}</td>
+              <td>{{doc?.CreatedBy}}</td>
+              <td>{{doc?.CreatedDate}}</td>
+              
+              <td>{{doc?.ModifiedBy}}</td>
 
-              <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
+              
               <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
