--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
@@ -1,20 +1,19 @@
-
-<div class="card shadow mb-4" style="padding-top: 2px;">
+<!--<div class="card shadow mb-4" style="padding-top: 2px;">
   <div class="card-header py-3">
     <div col-6 style="float: left;">
       <h6 class="m-0 font-weight-bold text-primary">User Group Configuration</h6>
     </div>
     <div col-6 style="float: right;">
-      <button class="btn btn-primary" type="button" [routerLink]="['/mainpage/users/addusergroup']">
+      <button class="btn btn-primary" type="button" (click)="addusergroup()">
         Add
       </button>
     </div>
   </div>
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-        <!--*ngIf="types?.length>0"-->
-        <thead>
+      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" >-->
+<!--*ngIf="types?.length>0"-->
+<!--<thead>
           <tr>
             <th scope="col">S.No</th>
             <th scope="col">User Group Name</th>
@@ -45,4 +44,50 @@
       <p>No items to display</p>
     </div>
   </div>
+</div>-->
+
+
+<div class="container-fluid">
+  <div class="row p-2">
+    <div class="col">
+
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="page-title flex-grow-1">User Group Configuration</h4>
+        <div class="d-flex page-title-actions">
+          <input type="text" class="form-control" placeholder="Search">
+          <button class="btn btn-primary mx-2" type="button" (click)="addusergroup()" >Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row p-2">
+    <div class="col">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        <p-table [value]="types" tableStyleClass="table table-striped">
+          <ng-template pTemplate="header">
+            <tr>            
+
+              <th pSortableColumn="S.No" style="width:20%">S.No<p-sortIcon field=""></p-sortIcon></th>
+              <th pSortableColumn="Plant Name" style="width:30%">User Group Name<p-sortIcon field="Plant Name"></p-sortIcon></th>
+              <th pSortableColumn="Plant Code" style="width:25%">Unique Code<p-sortIcon field="Plant Code"></p-sortIcon></th>
+              <th pSortableColumn="Comments" style="width:20%">Total Users<p-sortIcon field="Comments"></p-sortIcon></th>
+              
+              <th style="width:80px">Actions</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-doc let-i="rowIndex">
+            <tr>
+              <th scope="row">{{i+1}}</th>
+              <td>{{doc?.usergroupname}}</td>
+              <td>{{doc?.code}}</td>
+              <td>{{doc?.users}}</td>              
+              <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </div>
 </div>
+
+
