--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -182,7 +182,7 @@
                 [options]="usergroups"
                 [(ngModel)]="workflow.reviewersGroup"
                 optionLabel="Usergroupname" placeholder="Select a User Group"
-                
+                optionValue="Usergroupname"
               >
               </p-dropdown>
             </div>
@@ -269,7 +269,7 @@
                 [options]="usergroups"
                 [(ngModel)]="workflow.approvalsGroup"
                 optionLabel="Usergroupname" placeholder="Select a User Group"
-                
+                optionValue="Usergroupname"
               >
               </p-dropdown>
             </div>
