--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -22,14 +22,13 @@
           <ng-template pTemplate="header">
             <tr>
               <th>S.No</th>
-              
               <th pSortableColumn="DepartmentName" style="width:20%">Department Name<p-sortIcon field="Department Name"></p-sortIcon></th>
               <th pSortableColumn="DepartmentCode" style="width:10%">Department Code<p-sortIcon field="Department Code"></p-sortIcon> </th>
               <th pSortableColumn="Description" style="width:15%">Comments<p-sortIcon field="Comments"></p-sortIcon></th>
               <th pSortableColumn="RegisteredBy" style="width:20%">Registered by<p-sortIcon field="Registered by"></p-sortIcon></th>
               <th pSortableColumn="RegisteredOn" style="width:200px">Registered On <p-sortIcon field="Registered On"></p-sortIcon></th>
-              <th pSortableColumn="Status" style="width:200px">Status </th><p-sortIcon field="Status"></p-sortIcon>
-              <th style="width:80px">Actions</th>
+              <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+              <th>Actions</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
@@ -41,7 +40,7 @@
               <td>{{doc?.ModifiedBy}}</td>
               <td>{{doc?.ModifiedDate | date }}</td>
               <td><span (click)="getStatusClass(doc['Status'])">Success</span></td>
-              <td class="text-right" style="width:80px" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
+              <td class="text-right" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
         </p-table>
