--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -62,7 +62,7 @@
           <div class="form-group row my-4">
             <div class="col-sm-10 offset-sm-2">
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-              <button type="submit" class="btn btn-primary" *ngIf="!editMode" ngSubmit="submit(adddoc)">Submit</button>
+              <button type="submit" class="btn btn-primary" *ngIf="!editMode" (click)="submit(adddoc)">Submit</button>
               <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
             </div>
           </div>
