--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
@@ -19,9 +19,9 @@
          
           <ng-template pTemplate="header">
             <tr>
-              <th>#</th>
+              <th>S.No</th>
 
-              <th pSortableColumn="S.No" style="width:20%">S.No</th>
+              <!--<th pSortableColumn="S.No" style="width:20%">S.No</th>-->
               <th pSortableColumn="Plant Name" style="width:10%">Plant Name</th>
               <th pSortableColumn="Plant Code" style="width:15%">Plant Code</th>
               <th pSortableColumn="Comments" style="width:20%">Comments</th>
@@ -40,7 +40,7 @@
               <td>{{doc?.Comments}}</td>
               <td>{{doc?.ModifiedBy}}</td>
               <td>{{doc?.ModifiedDate }}</td>
-              <td>{{doc?.Status }}</td>
+             
               <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
               <td class="text-center"><i class="bi bi-pencil"></i></td>
               <!--(click)="editdoc(doc)"-->
