--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
@@ -3,7 +3,7 @@
     <div class="col">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h4 class="page-title flex-grow-1">Document Types</h4>
+        <h4 class="page-title flex-grow-1">User Configuration</h4>
         <div class="d-flex page-title-actions">
           <input type="text" class="form-control" placeholder="Search">
           <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddUser()">Add</button>
