--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="adddoctype(newuser)" #fm="ngForm">
+      <form (ngSubmit)="adddoctype(adduser)" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
@@ -18,7 +18,7 @@
                      id="firstname"
                      name="firstname"
                      placeholder="Enter First Nmae"
-                     [(ngModel)]="newuser.FirstName" [disabled]="viewMode" />
+                     [(ngModel)]="adduser.FirstName" [disabled]="viewMode" />
             </div>
           </div>
           <div class="form-group row">
@@ -29,7 +29,7 @@
                      id="lastname"
                      name="lastname"
                      placeholder="Enter Last Name"
-                     [(ngModel)]="newuser.LastName" [disabled]="viewMode" />
+                     [(ngModel)]="adduser.LastName" [disabled]="viewMode" />
             </div>
           </div>
           <div class="form-group row">
@@ -40,7 +40,7 @@
                      id="userid"
                      name="userid"
                      placeholder="Enter Userid"
-                     [(ngModel)]="newuser.UserID" [disabled]="viewMode" />
+                     [(ngModel)]="adduser.UserID" [disabled]="viewMode" />
             </div>
           </div>
           <div class="form-group row">
@@ -78,7 +78,7 @@
                      id="doj"
                      name="doj"
                      placeholder="Enter First Nmae"
-                     [(ngModel)]="newuser.Doj" [disabled]="viewMode" />
+                     [(ngModel)]="adduser.Doj" [disabled]="viewMode" />
             </div>
           </div>
 
@@ -90,7 +90,7 @@
                      id="emailid"
                      name="emailid"
                      placeholder="Enter First Nmae"
-                     [(ngModel)]="newuser.EmailId" [disabled]="viewMode" />
+                     [(ngModel)]="adduser.EmailId" [disabled]="viewMode" />
             </div>
           </div>
         </div>
