--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
@@ -8,18 +6,18 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="adddoctype(documentType)" #fm="ngForm">
+      <form (ngSubmit)="submit(addrole)" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Role</label>
+            <label for="Role" class="col-sm-2 col-form-label">Role</label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
                      id="role"
                      name="role"
                      placeholder=""
-                     [(ngModel)]="roles.role" [disabled]="viewMode" />
+                     [(ngModel)]="addrole.Role" [disabled]="viewMode" />
             </div>
           </div>
           <div class="form-group row">
@@ -30,7 +28,7 @@
                      id="department"
                      name="department"
                      placeholder=""
-                     [(ngModel)]="Department.department" [disabled]="viewMode" />
+                     [(ngModel)]="addrole.Department" [disabled]="viewMode" />
             </div>
           </div>
 
@@ -43,16 +41,10 @@
                      id="comments"
                      name="comments"
                      placeholder=""
-                     [(ngModel)]="roleregistration.comments" [disabled]="viewMode" />
+                     [(ngModel)]="addrole.Comments" [disabled]="viewMode" />
             </div>
           </div>
-
-
-
-
-
         </div>
-
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
@@ -60,7 +52,6 @@
             <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
         </div>
-
       </form>
     </div>
   </div>
