--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="addRequest()">
+      <form (ngSubmit)="saveRequest()">
         <div class="p-4 bg-white shadow-dark rounded-2">
           <div class="form-group row">
             <label for="reqCode" class="col-sm-2 col-form-label"
@@ -19,7 +19,7 @@
                 id="reqCode"
                 name="reqCode"
                 placeholder="System Generated"
-                [(ngModel)]="request.reqCode"
+                [(ngModel)]="request.drid"
                 readonly
               />
             </div>
@@ -33,8 +33,9 @@
               <p-dropdown
                 name="docType"
                 [options]="typeSource"
-                [(ngModel)]="request.documentType"
-                optionLabel="label"
+                [(ngModel)]="request.documenttype"
+                optionLabel="Documenttypename"
+                optionValue="Documenttypename"                
               >
               </p-dropdown>
             </div>
@@ -49,7 +50,8 @@
                 name="department"
                 [options]="departmentsSource"
                 [(ngModel)]="request.department"
-                optionLabel="label"
+                optionLabel="DepartmentName"
+                optionValue="DepartmentName"
               >
               </p-dropdown>
             </div>
@@ -64,7 +66,8 @@
                 name="workflow"
                 [options]="workflowsSource"
                 [(ngModel)]="request.workflow"
-                optionLabel="label"
+                optionLabel="workflowName"                
+                optionValue="workflowName"  
               >
               </p-dropdown>
             </div>
