--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -42,21 +42,21 @@
               <th class="text-center" style="width: 80px">Actions</th>
             </tr>
           </ng-template>
-          <ng-template pTemplate="body" let-docType let-i="rowIndex">
+          <ng-template pTemplate="body" let-docPreperation let-i="rowIndex">
             <tr>
               <td>{{ i + 1 }}</td>
-              <td>{{ docType.reqCode }}</td>
-              <td>{{ docType.documentType }}</td>
-              <td>{{ docType.department }}</td>
-              <td>{{ docType.assignedToGroup }}</td>
+              <td>{{ docPreperation.dpnid }}</td>
+              <td>{{ docPreperation.documenttype }}</td>
+              <td>{{ docPreperation.department }}</td>
+              <td>{{ docPreperation.template }}</td>
               <td>
                 <span
                   class="status"
-                  [ngClass]="getStatusClass(docType['status'])"
-                  >{{ docType.status }}
+                  [ngClass]="getStatusClass(docPreperation['status'])"
+                  >{{ docPreperation.status }}
                 </span>
               </td>
-              <td class="text-center"><a (click)="navigateToAddPreparation()"><i class="bi bi-arrow-right"></i></a></td>
+              <td class="text-center"><a (click)="navigateToAddPreparation(docPreperation)"><i class="bi bi-arrow-right"></i></a></td>
             </tr>
           </ng-template>
         </p-table>
