--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -18,12 +18,12 @@
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
-                        <th pSortableColumn="reqCode" style="width:20%">Req Code<p-sortIcon field="reqCode"></p-sortIcon></th>
-                        <th pSortableColumn="documentType" style="width:10%">Document type <p-sortIcon field="documentType"></p-sortIcon></th>
+                        <th pSortableColumn="drid" style="width:20%">Req Code<p-sortIcon field="drid"></p-sortIcon></th>
+                        <th pSortableColumn="documenttype" style="width:10%">Document type <p-sortIcon field="documenttype"></p-sortIcon></th>
                         <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
-                        <th pSortableColumn="registeredBy" style="width:20%">Registered by<p-sortIcon field="registeredBy"></p-sortIcon></th>
-                        <th pSortableColumn="registeredOn" style="width:200px">Registered On <p-sortIcon field="registeredOn"></p-sortIcon></th>
-                        <th pSortableColumn="approvedBy" style="width:20%">Approved by<p-sortIcon field="approvedBy"></p-sortIcon></th>
+                        <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
+                        <th pSortableColumn="modifiedDate" style="width:200px">Registered On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
+                        <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
                         <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
                         <th style="width:80px">Actions</th>
@@ -32,15 +32,15 @@
                 <ng-template pTemplate="body" let-docType let-i="rowIndex">
                     <tr>  
                         <td>{{ i + 1 }}</td>  
-                        <td>{{docType.reqCode}}</td>
-                        <td>{{docType.documentType}}</td>
-                        <td>{{docType.department}}</td>
-                        <td>{{docType.registeredBy}}</td>
-                        <td>{{docType.registeredOn}}</td>
-                        <td>{{docType.approvedBy}}</td>
-                        <td>{{docType.approvedOn}}</td>
+                        <td>{{docType?.drid}}</td>
+                        <td>{{docType?.documenttype}}</td>
+                        <td>{{docType?.department}}</td>
+                        <td>{{docType?.modifiedBy}}</td>
+                        <td>{{docType?.modifiedDate| date}}</td>
+                        <td>{{docType?.approvedby}}</td>
+                        <td>{{docType?.approvedOn| date}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(docType['status'])">{{docType.status}} </span></td>
-                        <td class="text-center"><i class="bi bi-pencil"></i></td>
+                        <td class="text-center"><i (click)="editdocreq(docType)" class="bi bi-pencil"></i></td>
                     </tr>
                 </ng-template>
             </p-table>
