--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -181,8 +181,8 @@
                 name="usergroupname"
                 [options]="usergroups"
                 [(ngModel)]="workflow.reviewersGroup"
-                optionLabel="Usergroupname" placeholder="Select a User Group"
-                optionValue="Usergroupname"
+                optionLabel="usergroupname" placeholder="Select a User Group"
+                optionValue="usergroupname"
               >
               </p-dropdown>
             </div>
@@ -268,8 +268,8 @@
                 name="usergroupname"
                 [options]="usergroups"
                 [(ngModel)]="workflow.approvalsGroup"
-                optionLabel="Usergroupname" placeholder="Select a User Group"
-                optionValue="Usergroupname"
+                optionLabel="usergroupname" placeholder="Select a User Group"
+                optionValue="usergroupname"
               >
               </p-dropdown>
             </div>
