--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -7,31 +7,33 @@
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table [value]="assignedDatasource" tableStyleClass="table table-striped">
+            <p-table [value]="types" tableStyleClass="table table-striped">
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
-                        <th pSortableColumn="taskType" style="width:20%">Task type <p-sortIcon field="taskType"></p-sortIcon></th>
-                        <th pSortableColumn="stage" style="width:10%">Stage <p-sortIcon field="stage"></p-sortIcon></th>
+                        <th pSortableColumn="TaskType" style="width:20%">Task type <p-sortIcon field="TaskType"></p-sortIcon></th>
+                        <th pSortableColumn="TaskName" style="width:20%">Task Name <p-sortIcon field="TaskName"></p-sortIcon></th>
+                        <th pSortableColumn="Stage" style="width:10%">Stage <p-sortIcon field="Stage"></p-sortIcon></th>
                         <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th>
                         <th pSortableColumn="initiatedBy" style="width:20%">Initiated By <p-sortIcon field="initiatedBy"></p-sortIcon></th>
-                        <th pSortableColumn="initiatedOn" style="width:200px">Initiated On <p-sortIcon field="initiatedOn"></p-sortIcon></th>
-                        <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
-                        <th pSortableColumn="dueDate" style="width:200px">Due Date <p-sortIcon field="dueDate"></p-sortIcon></th>
+                        <th pSortableColumn="InitiatedOn" style="width:200px">Initiated On <p-sortIcon field="InitiatedOn"></p-sortIcon></th>
+                        <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+                        <th pSortableColumn="InitiatedOn" style="width:200px">Due Date <p-sortIcon field="InitiatedOn"></p-sortIcon></th>
 
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-assigned let-i="rowIndex">
                     <tr>  
                         <td>{{ i + 1 }}</td>  
-                        <td>{{assigned.taskType}}</td>
-                        <td>{{assigned.stage}}</td>
+                        <td>{{assigned.TaskType}}</td>
+                        <td>{{assigned.TaskName}}</td>
+                        <td>{{assigned.Stage}}</td>
                         <td>{{assigned.assignedGroup}}</td>
                         <td>{{assigned.initiatedBy}}</td>
-                        <td>{{assigned.initiatedOn}}</td>
+                        <td>{{assigned.InitiatedOn}}</td>
                         <!-- <td>{{assigned.status}}</td> -->
-                        <td><span class="status" [ngClass]="getStatusClass(assigned.status)">{{assigned.status}}</span></td>
-                        <td>{{assigned.dueDate}}</td>
+                        <td><span class="status" [ngClass]="getStatusClass(assigned.Status)">{{assigned.Status}}</span></td>
+                        <td>{{assigned.InitiatedOn}}</td>
                     </tr>
                 </ng-template>
             </p-table>
