Print logic Integration

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -55,6 +55,15 @@
           </div>
         </div>
       </div>
+
+      <div class="col col-lg-3">
+        <div class="card" (click)="navigateTo('existing-document-requests')">
+          <div class="card-body">
+            <i class="fa fa-print"></i>
+            <h5 class="card-title">Existing Document Request</h5>
+          </div>
+        </div>
+      </div>
   
     </div>
   </div>
