--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
@@ -23,12 +23,20 @@
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">Department</label>
             <div class="col-sm-10">
-              <input type="text"
+              <!-- <input type="text"
                      class="form-control"
                      id="department"
                      name="department"
                      placeholder=""
-                     [(ngModel)]="addrole.Department" [disabled]="viewMode" />
+                     [(ngModel)]="addrole.Department" [disabled]="viewMode" /> -->
+                     <p-dropdown
+                name="DepartmentName"
+                [options]="types"
+                [(ngModel)]="addrole.Department"
+                optionLabel="DepartmentName" placeholder="Select a Department"
+                optionValue="DepartmentName"
+              >
+              </p-dropdown>
             </div>
           </div>
 
