--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/new-print-request.component.html
@@ -1,69 +1,94 @@
-<body>
-
-    <div class="card shadow mb-4" style="padding-top: 2px;">
-   <div class="card-header py-3">
-       <div col-12 style="float: left;">
-           <h6 class="m-0 font-weight-bold text-primary">New Print Request</h6>
-       </div>
-
-   </div>
-   <div class="card-body">
-       <form (ngSubmit)="submit(adddoc)" #fm="ngForm">
-           <div class="modal-body">
-               
-               <div class="form-group row">
-
-                   <label for="BrandName" class="col-sm-4 col-form-label">Document Type</label>
-                   <div class="col-sm-8">
-                        <select>
-                             <option >1</option>
-                             <option >2</option>
-                             <option >3</option>
-                             <option >4</option>
-                             <option >5</option>
-                         </select>
-                   </div>
-               </div>
-           
-               <div class="form-group row">
-
-                   <label for="BrandName" class="col-sm-4 col-form-label">Document Name</label>
-                   <div class="col-sm-8">
-                       <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddoc.plantname" pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Document Name" #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
-                   </div>
-               </div>
-
-           </div>
-           <div class="form-group row">
-
-               <label for="BrandName" class="col-sm-4 col-form-label">Document No</label>
-
-               <div class="col-sm-8">
-                   <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddoc.plantcode" pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Documnet No" #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
-               </div>
-           </div>
-           
+<div class="container-fluid">
+  <div class="row p-2">
+    <div class="col">
+      <h4 class="page-title">New Print Request</h4>
+    </div>
+  </div>
+  <div class="row p-2">
+    <div class="col">
+      <form (ngSubmit)="savePrintRequest()" #fm="ngForm">
+        <div class="p-4 bg-white shadow-dark rounded-2">
           <div class="form-group row">
+            <label for="prefix" class="col-sm-2 col-form-label">Document Number</label>
+            <div class="col-sm-10">
+              <select class="form-control" id="docnum" name="DocumentNumber" [(ngModel)]="print.DocumentNumber" [disabled]="viewMode">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="documentType" class="col-sm-2 col-form-label">Document Title</label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     id="documentTitle"
+                     name="documenttitle"
+                     placeholder=""
+                     [(ngModel)]="print.documenttitle" [disabled]="viewMode" />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="prefix" class="col-sm-2 col-form-label">Print Type</label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     id="print"
+                     name="printType"
+                     placeholder=""
+                     [(ngModel)]="print.printtype" [disabled]="viewMode" />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="noofcopies" class="col-sm-2 col-form-label">No Of Copies</label>
+            <div class="col-sm-10">
+              <input type="number"
+                     class="form-control"
+                     id="noofcopies"
+                     name="noofcopies"
+                     placeholder=""
+                     [(ngModel)]="print.noofcopies" [disabled]="viewMode" />
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="prefix" class="col-sm-2 col-form-label">Workflow</label>
+            <div class="col-sm-10">
+              <div class="col-sm-10">
+                <p-dropdown name="workflow"
+                            [options]="workflowsSource"
+                            [(ngModel)]="print.workflow"
+                            optionLabel="workflowName"
+                            optionValue="workflowName">
+                </p-dropdown>
+              </div>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="documentType" class="col-sm-2 col-form-label">Reason</label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     id="reason"
+                     name="Reason"
+                     placeholder=""
+                     [(ngModel)]="print.reason" [disabled]="viewMode" />
+            </div>
+          </div>
+        </div>
+        <div class="form-group row my-4">
+          <div class="col-sm-10 offset-sm-2">
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
-                   <label for="BrandName" class="col-sm-4 col-form-label">No Of Prints</label>
-                   <div class="col-sm-8">
-                        <select>
-                             <option >1</option>
-                             <option >2</option>
-                             <option >3</option>
-                             <option >4</option>
-                             <option >5</option>
-                         </select>
-                   </div>
-               </div>
-           
-           <div class="modal-footer">
-               <button type="button" class="btn btn-secondary" (click)="closepopup();">Submit</button>
-               <button type="submit" class="btn btn-primary">Cancel</button>
-           </div>
-       </form>
-   </div>
-</div>  
- 
 
-</body>
