--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -48,7 +48,7 @@
       </div>
   
       <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('document-types')">
+        <div class="card" (click)="navigateTo('document-print')">
           <div class="card-body">
             <i class="fa fa-print"></i>
             <h5 class="card-title">Document Print</h5>
@@ -67,4 +67,3 @@
   
     </div>
   </div>
-  
