--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/new-print-request.component.html
@@ -11,14 +11,12 @@
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">Document Number</label>
             <div class="col-sm-10">
-              <select class="form-control" id="docnum" name="DocumentNumber" [(ngModel)]="print.DocumentNumber" [disabled]="viewMode">
-                <option>aa</option>
-                <option>bb</option>
-                <option>cc</option>
-                <option>dd</option>
-                <option>ee</option>
-                <option>ff</option>
-              </select>
+              <p-dropdown name="docType"
+                          [options]="requestsInfo"
+                          [(ngModel)]="print.DocumentNumber"
+                          optionLabel="documentno"
+                          optionValue="documentno">
+              </p-dropdown>
             </div>
           </div>
           <div class="form-group row">
@@ -31,61 +29,62 @@
                      placeholder=""
                      [(ngModel)]="print.documenttitle" [disabled]="viewMode" />
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Print Type</label>
-            <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     id="print"
-                     name="printType"
-                     placeholder=""
-                     [(ngModel)]="print.printtype" [disabled]="viewMode" />
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="noofcopies" class="col-sm-2 col-form-label">No Of Copies</label>
-            <div class="col-sm-10">
-              <input type="number"
-                     class="form-control"
-                     id="noofcopies"
-                     name="noofcopies"
-                     placeholder=""
-                     [(ngModel)]="print.noofcopies" [disabled]="viewMode" />
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Workflow</label>
-            <div class="col-sm-10">
+
+            <div class="form-group row">
+              <label for="prefix" class="col-sm-2 col-form-label">Print Type</label>
               <div class="col-sm-10">
-                <p-dropdown name="workflow"
-                            [options]="workflowsSource"
-                            [(ngModel)]="print.workflow"
-                            optionLabel="workflowName"
-                            optionValue="workflowName">
-                </p-dropdown>
+                <input type="text"
+                       class="form-control"
+                       id="print"
+                       name="printType"
+                       placeholder=""
+                       [(ngModel)]="print.printtype" [disabled]="viewMode" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="noofcopies" class="col-sm-2 col-form-label">No Of Copies</label>
+              <div class="col-sm-10">
+                <input type="number"
+                       class="form-control"
+                       id="noofcopies"
+                       name="noofcopies"
+                       placeholder=""
+                       [(ngModel)]="print.noofcopies" [disabled]="viewMode" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="prefix" class="col-sm-2 col-form-label">Workflow</label>
+              <div class="col-sm-10">
+                <div class="col-sm-10">
+                  <p-dropdown name="workflow"
+                              [options]="workflowsSource"
+                              [(ngModel)]="print.workflow"
+                              optionLabel="workflowName"
+                              optionValue="workflowName">
+                  </p-dropdown>
+                </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="documentType" class="col-sm-2 col-form-label">Reason</label>
+              <div class="col-sm-10">
+                <input type="text"
+                       class="form-control"
+                       id="reason"
+                       name="Reason"
+                       placeholder=""
+                       [(ngModel)]="print.reason" [disabled]="viewMode" />
               </div>
             </div>
           </div>
-          <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Reason</label>
-            <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     id="reason"
-                     name="Reason"
-                     placeholder=""
-                     [(ngModel)]="print.reason" [disabled]="viewMode" />
+          <div class="form-group row my-4">
+            <div class="col-sm-10 offset-sm-2">
+              <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+              <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+              <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
             </div>
           </div>
-        </div>
-        <div class="form-group row my-4">
-          <div class="col-sm-10 offset-sm-2">
-            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-            <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
-            <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
-        </div>
       </form>
     </div>
   </div>
